--- a/list.html
+++ b/list.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="list.css" >
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -88,7 +90,7 @@
         <div class="face front">
             <img class="imgFront1" src="./images/medical.png" alt="">
 
-            <h2>Patient Name - Mark Kube</h2>
+            <h2 class="NameP">Patient Name - Mark Kube</h2>
 
         </div>
         <div class="face back">
@@ -137,7 +139,7 @@
         <div class="face front">
             <img class="imgFront1" src="./images/medical.png" alt="">
 
-            <h2>Patient Name - Nish Pelphs</h2>
+            <h2 class="NameP">Patient Name - Nish Pelphs</h2>
 
         </div>
         <div class="face back">
@@ -185,7 +187,7 @@
         <div class="face front">
             <img class="imgFront1" src="./images/medical.png" alt="">
 
-            <h2>Patient Name - Nabeel Noor</h2>
+            <h2 class="NameP">Patient Name - Nabeel Noor</h2>
 
         </div>
         <div class="face back">
@@ -233,7 +235,7 @@
         <div class="face front">
             <img class="imgFront1" src="./images/medical.png" alt="">
 
-            <h2>Patient Name - Micheal Sentu</h2>
+            <h2 class="NameP">Patient Name - Micheal Sentu</h2>
 
         </div>
         <div class="face back">
