--- a/PatientName.html
+++ b/PatientName.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>3D Carousel Animated Profile Card </title>
+<title>Patient Name </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
